[package]
name = "waller"
description = "Wall applier for your workspace."
authors = [".ZERO"]
version = "0.1.0"
edition = "2021"
license = "MIT

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
home = "0.5.4"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.7.2"
walkdir = "2.3.2"
