[package]
name = "waller"
description = "Safe wallpaper manager with support of mist popular wallpaper programs."
authors = [".ZERO"]
version = "0.4.0-dev"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
home = "0.5.4"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.7.2"
